--- a/index.html
+++ b/index.html
@@ -201,9 +201,8 @@
           <span>Objetivos:</span>
           <h2>Objetivos:</h2>
           <p>
-            Emplear el viento, como recurso natural, para reducir la contaminación ambiental y generar energía renovable a partir de 
-            aerogeneradores, con el propósito de satisfacer de manera sustentable las necesidades de una comunidad en Oaxaca sin 
-            comprometer el futuro del planeta en el proceso.
+            Emplear el viento, recurso natural, para reducir la contaminación ambiental y generar energía renovable a partir de aerogeneradores, con el propósito de satisfacer de 
+            manera sustentable las necesidades de comunidades rurales sin comprometer el futuro del planeta en el proceso y adjuntando una ecotecnología viable como alternativa.
           </p>
         </div>
 
