--- a/index.html
+++ b/index.html
@@ -238,7 +238,8 @@
             <div class="section-title">
               <span>Metodología</span>
               <h2>Metodología</h2>
-              <p><b>A continuación, presentamos un diagrama sobre los pasos que se siguieron para concluir el proyecto:</b></p>
+              <p><b>A continuación, presentamos un diagrama sobre la metodología y materiales utilizados durante este proyecto:</b></p>
+              <img src="assets/img/club1.jpg" class="img-fluid" alt="">
             </div>
             
         </div>
