--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
               <span>Metodología</span>
               <h2>Metodología</h2>
               <p><b>A continuación, presentamos un diagrama sobre la metodología y materiales utilizados durante este proyecto:</b></p>
-              <img src="assets/img/club1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/club2.png" class="img-fluid" alt="">
             </div>
             
         </div>
