--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <div class="section-title">
                   <span>Marco teórico</span>
                   <h2>Marco teórico</h2>
-                  <p>
+                  <p> 
                     La incorporación creciente de fuentes renovables de energía en los sistemas energéticos obedece a motivos, 
                     tanto de <b>diversificación</b> y <b>seguridad energéticas</b>, como de combate al cambio climático, generación de empleos, mejor acceso
                     a la energía e impulso al desarrollo rural.
@@ -143,7 +143,7 @@
                     se realizaron en 1980. Donde destacó la región sur del <b>istmo de Tehuantepec</b>, en el estado de Oaxaca, donde la velocidad 
                     media anual de los vientos tiene variaciones estacionales extremas en el transcurso del año.
                   </p> <br/>
-                  <p>
+                  <p> 
                     Los vientos en el istmo de Tehuantepec son además relativamente estables, un porcentaje alto de horas por año, de ahí que su 
                     potencial energético sea considerado como <b>excelente</b>. Las características topográficas del istmo de Tehuantepec son igualmente 
                     favorables para la instalación de parques eólicos. 
@@ -170,7 +170,7 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 content">
             <h3>Energía eólica en México ocupada en el ámbito rural.</h3>
-            <p>
+            <p><align = "justify">
               El concepto de energía eólica se refiere a aquella energía cinética generada por la fuerza del viento, la cual 
               puede ser aprovechada de diferentes formas. México cuenta con un inmenso potencial eólico, algunos sitios identificados
               con viento de alta calidad son las zonas costeras, entre ellas:
@@ -182,7 +182,7 @@
               <li><i class="bi bi-check-circle"></i> Oaxaca</li>
               <li><i class="bi bi-check-circle"></i> Yucatán</li>
             </ul>
-            <p>
+            <p><align = "justify">
               Desafortunadamente, dicho potencial no ha sido aprovechado. El presente proyecto analizó zonas rurales con potencial para la 
               generación de energía a partir de los vientos en México, considerando los aspectos sociales y económicos involucrados en el
               desarrollo de proyectos de energía eólica.
@@ -274,7 +274,7 @@
               </div>
               <div class="col-lg-6 pt-4 pt-lg-0 content">
                 <h3>Conclusión</h3>
-                <p>
+                <p><align = "justify">
                   Tras los estudios realizados, se puede afirmar que el coste económico de construcción
                   casera (sin tener en cuenta la mano de obra) del aerogenerador es bajo, y a nivel energético, es
                   viable, ya que en un periodo muy reducido, en comparación a la vida útil del aerogenerador, se
