--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
     
             <div class="row">
               <div class="col-lg-6">
-                <img src="assets/img/eolica4.png" class="img-fluid" alt="">
+                <img src="assets/img/eolica10.jpg" class="img-fluid" alt="">
               </div>
               <div class="col-lg-6 pt-4 pt-lg-0 content">
                 <h3>Conclusión</h3>
