--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 content">
             <h3>Energía eólica en México ocupada en el ámbito rural.</h3>
-            <p><align = "justify">
+            <p> <align = "justify">
               El concepto de energía eólica se refiere a aquella energía cinética generada por la fuerza del viento, la cual 
               puede ser aprovechada de diferentes formas. México cuenta con un inmenso potencial eólico, algunos sitios identificados
               con viento de alta calidad son las zonas costeras, entre ellas:
@@ -182,7 +182,7 @@
               <li><i class="bi bi-check-circle"></i> Oaxaca</li>
               <li><i class="bi bi-check-circle"></i> Yucatán</li>
             </ul>
-            <p><align = "justify">
+            <p> <align = "justify">
               Desafortunadamente, dicho potencial no ha sido aprovechado. El presente proyecto analizó zonas rurales con potencial para la 
               generación de energía a partir de los vientos en México, considerando los aspectos sociales y económicos involucrados en el
               desarrollo de proyectos de energía eólica.
@@ -270,11 +270,11 @@
     
             <div class="row">
               <div class="col-lg-6">
-                <img src="assets/img/eolica10.jpg" class="img-fluid" alt="">
+                <img src="assets/img/eolica11.png" class="img-fluid" alt="">
               </div>
               <div class="col-lg-6 pt-4 pt-lg-0 content">
                 <h3>Conclusión</h3>
-                <p><align = "justify">
+                <p> <align = "justify">
                   Tras los estudios realizados, se puede afirmar que el coste económico de construcción
                   casera (sin tener en cuenta la mano de obra) del aerogenerador es bajo, y a nivel energético, es
                   viable, ya que en un periodo muy reducido, en comparación a la vida útil del aerogenerador, se
