--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             <div class="section-title">
               <span>Video</span>
               <h2>Video</h2>
-              <iframe width="560" height="315" src="https://youtu.be/AX1a4DkvgHE" title="Reproductor de video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/AX1a4DkvgHE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </p> <br/>
             </div>
             
