--- a/index.html
+++ b/index.html
@@ -254,11 +254,22 @@
                   <span>Resultados</span>
                   <h2>Resultados</h2>
                   <p>
-                    A continuación apreciamos una primera imagen de cómo un aerogenerador puede acoplarse a un espacio rural, en 
-                    éste caso, en el patio del centro de salud de Chiautla de Tapia, Puebla. Éste generador podría alimentar al 
-                    refrigerador que almacena medicamentos como insulina y antídotos para picaduras de animales que se muestra a 
-                    continuación.
+                    A continuación apreciamos cómo un aerogenerador puede acoplarse a un espacio rural, en 
+                    éste caso, en el patio del centro de salud de Chiautla de Tapia, Puebla.
                   </p> <br/>
+                  <img src="assets/img/Aerogenerador1.jpg" class="img-fluid" alt="">
+                  <p>
+                    Éste generador podría alimentar a un refrigerador que almacena medicamentos como insulina 
+                    y antídotos para picaduras de animales de importancia médica. En la siguiente imagen, se muestra el
+                    refrigerador médico del centro de salud de la comunidad mencionada anteriormente.
+                  </p> <br/>
+                  <img src="assets/img/refrigerador.jfif" class="img-fluid" alt="">
+                  <p>
+                    Enseguida, encontramos la alternativa mecánica para las regiones que no se encuentren dentro 
+                    de la red de máximo aprovechamiento eólico, pero si registren necesidad de implementar una 
+                    estrategia energética.
+                  </p> <br/>
+                  <img src="assets/img/BICICLETA.png" class="img-fluid" alt="">
                 </div>
             </div>
           </div>
