--- a/index.html
+++ b/index.html
@@ -258,13 +258,13 @@
                     éste caso, en el patio del centro de salud de Chiautla de Tapia, Puebla.
                   </p> <br/>
                   <img src="assets/img/Aerogenerador1.jpg" class="img-fluid" alt=""> 
-                  <br/> <p>
+                  <p>
                     Éste generador podría alimentar a un refrigerador que almacena medicamentos como insulina 
                     y antídotos para picaduras de animales de importancia médica. En la siguiente imagen, se muestra el
                     refrigerador médico del centro de salud de la comunidad mencionada anteriormente.
                   </p> <br/>
                   <img src="assets/img/refrigerador.jfif" class="img-fluid" alt="">
-                  <br/> <p>
+                  <p>
                     Enseguida, encontramos la alternativa mecánica para las regiones que no se encuentren dentro 
                     de la red de máximo aprovechamiento eólico, pero si registren necesidad de implementar una 
                     estrategia energética.
@@ -285,15 +285,15 @@
               </div>
               <div class="col-lg-6 pt-4 pt-lg-0 content">
                 <h3>Conclusión</h3>
-                <p> <align = "justify">
-                  Tras los estudios realizados, se puede afirmar que el coste económico de construcción
+                <p> <align = "justify"> Tras los estudios realizados, se puede afirmar que el coste económico de construcción
                   casera (sin tener en cuenta la mano de obra) del aerogenerador es bajo, y a nivel energético, es
                   viable, ya que en un periodo muy reducido, en comparación a la vida útil del aerogenerador, se
                   recupera la energía consumida en la construcción, emplazando el aerogenerador en una zona
-                  de vientos bajos. Al mismo tiempo, el emplear un segundo método como la generación mecánica, 
+                  de vientos bajos. </p> <br/>
+                <p> <align = "justify"> Al mismo tiempo, el emplear un segundo método como la generación mecánica, 
                   asegura que en zonas donde no siempre es posible tener el recurso eólico, si sea posible tener 
-                  energía limpia y de calidad al alcance de cualquier persona.
-                </p>
+                  energía limpia y de calidad al alcance de cualquier persona. </p> <br/>
+                <p>¿Quieres saber si tu generador será útil el día de hoy?</p> <a href="https://earth.nullschool.net/?fbclid=IwAR1Tii1tYp2T8tSdaT9Rw9zeWpZ6JWh9pWCJnErSmj_Dw0SEF5jR3RVtRX4#current/wind/surface/level/orthographic=-95.90,19.40,3410">Descúbrelo aquí.</a>
               </div>
             </div>
           </div>
