--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
-          <h1>Lo que el viento se llevo... y lo que nos trajo.</h1>
-          <h2>Clubes de Ciencia México Challenge 2021.</h2>
-          <p>Club 15: Harnessing the Power of Wind.</p>
-          <p>Equipo 4.</p>
+          <h1>Lo que el viento se llevó... y lo que nos trajo.</h1>
+          <h2>Clubes de Ciencia México Challenge 2021</h2>
+          <p>Club 15: Harnessing the Power of Wind</p>
+          <p>Equipo 4</p>
           <div class="d-flex">
             <a href="#intro" class="btn-get-started scrollto">Introducción</a>
             <a href="https://youtu.be/AX1a4DkvgHE" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Ver video</span></a>
